=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk
-----------------------------------------------------------------------
2016-04-28                                                    trunk-496
Cosmetic update of ldau code

- Easier logistic in the loops in ldau

- Cosmetic changes for the interface of hubbard_term which
  now passes the local number of orbitals.

- Beautification of the DEBUG_PAO print-out.

modified:
  Src/final_H_f_stress.F
  Src/hsparse.F
  Src/ldau.F
  Src/register_rfs.F90
  Src/setup_hamiltonian.F

-----------------------------------------------------------------------
2016-04-28                                                    trunk-495
Fix possible double counting of Hldau

- If recompute_H_after_scf it is required that
  we use H_tmp in final_H_f_stress.

  This is now fixed.

modified:
  Src/final_H_f_stress.F

-----------------------------------------------------------------------
2016-04-28                                                    trunk-494
Almost fixed parallel version

- Implemented Alberto's fixes for the basis specifications
  in parallel with some minor corrections.
  
  This is because the basis_specs are only on Node == 0.
  However, the specifications should be broadcasted
  to the other nodes.

  This is now performed by dublicating the LDAU radial
  functions to the other nodes and retaining the
  data on all nodes.

  I have added the remaining Bcast which where required.

- Added bcast of the LDAU variables in broadcast_basis.
  Several variables are required Bcasted.

- Reduced memory requirements slightly

- Reverted globalization of DEldau as entered by
  Nick in r488.
  This is not needed as the DEldau is calculated
  from globalized occupations.

- Removed un-needed ldaushell in the basis_species.